# iac-sketch

./: .gitignore  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
base_manifest/: components.yaml  config.yaml  data.yaml  deprecated.yaml  etl.yaml  identifiers.yaml  objects.yaml  python.yaml  quality.yaml  relationships.yaml  requirements.yaml  system.yaml  world.yaml
docs/: data.md
example_manifests/: meaning.yaml
iac_sketch/: architect.py  data.py  docs.py  documentation.py  etl.py  extract.py  parse.py  sketch.py  system_tests.py  transform.py  validate.py
iac_sketch/extract/: __init__.py  extract_python.py  extract_yaml.py
iac_sketch/transform/: docs.py  preprocess.py  system.py
iaca/: data.py  etl.py  system_tests.py
iaca/extract/: __init__.py  extract_yaml.py
iaca/transform/: system.py
iaca/write/: __init__.py  write_yaml.py
public/: resources.json  workflow.json  workflow.yaml
public/components/: compliance.yaml  components.yaml  conventions.yaml  data.yaml  forms.yaml  infrastructure.yaml  meta.yaml  power_users.yaml  problems.yaml  products.yaml  reporting_framework_testcases.xlsx  requirements.yaml  roles.yaml  scratch.mmd  tables.yaml  test_entities.yaml  testcases.yaml  workflow.yaml
src/: App.js
tests/: conftest.py  nbtest.ipynb  nbtest_example-manifest.ipynb  nbtest_parse.ipynb  sketch.mmd  test_architect.py  test_data.py  test_docs.py  test_documentation.py  test_etl.py  test_extract.py  test_parse.py  test_sketch.py  test_system_tests.py  test_validate.py
tests/test_extract/: __init__.py  (+2 more)
(+260 files in other folders)
