[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iac-sketch"
version = "0.1.0"
description = "A sketch for infrastructure as code."
authors = [
    {name = "Zachary Hafen-Saavedra", email = "z.hafen.saavedra@gmail.com"},
]
dependencies = [
    "PyYAML>=6.0.2",
    "pandas",
    "seaborn",
]