[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "iac_sketch"
version = "0.1.0"
description = "A sketch for infrastructure as code."
authors = [
    {name = "Zachary Hafen-Saavedra", email = "z.hafen.saavedra@gmail.com"},
]
dependencies = [
    "PyYAML>=6.0.2",
    "pandas",
    "seaborn",
]